ajuste do curriculo

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     <li class="curriculo__conteudo__lista__topico">Comunicação Interpessoal</li>
                     <li class="curriculo__conteudo__lista__topico">Aprendizado Contínuo</li>
                     <li class="curriculo__conteudo__lista__topico">Conhecimento intermediário em <strong class="texto__destaque">Word</strong> e básico em <strong class="texto__destaque">Excel</strong></li>
-                    <li class="curriculo__conteudo__lista__topico">Familiaridades com linguagens <strong class="texto__destaque">C/C++</strong>, <strong class="texto__destaque">Python</strong>, <strong class="texto__destaque">HTML/CSS</strong> e <strong class="texto__destaque">JavaScript</strong></li>
+                    <li class="curriculo__conteudo__lista__topico">Familiaridades com linguagens <strong class="texto__destaque">C/C++</strong>, <strong class="texto__destaque">Python</strong> e <strong class="texto__destaque">HTML/CSS</strong>
                     <li class="curriculo__conteudo__lista__topico">Conhecimentos em Lógica de Programação</li>
                 </ul>
             
