ajuste no título

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Projeto de <strong class="texto__destaque">Front-End</strong>
             </h1>    
             <p class="apresentacao__conteudo__texto">
-                Olá! Meu Eric. Sou um estudante de <strong class="texto__destaque">Ciência de Computação</strong> e busco aprender novas tecnologias e habilidades.<br> 
+                Olá! Sou o Eric. Sou um estudante de <strong class="texto__destaque">Ciência de Computação</strong> e busco aprender novas tecnologias e habilidades.<br> 
                 <br>Conceitos como Reset, FlexBox, Media Query, Responsividade e Unidades Relativas foram utilizados nesta página.
             </p>
             <div class="apresentacao__links">
