--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/about.css">
-    <title>Curriculo</title>
+    <title>Currículo</title>
 </head>
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a href="index.html" class="cabecalho__menu--link">
-                Home
+                Início
             </a>
             <a href="about.html" class="cabecalho__menu--link">
                 Currículo
